# rehearse

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  DESIGN.md  LICENSE-APACHE  LICENSE-MIT  README.md  RELEASE.md  SEMANTICS.md
.github/workflows/: ci.yml
crates/rehearse/: Cargo.toml  README.md
crates/rehearse-macros/: Cargo.toml  README.md
crates/rehearse-macros/src/: crate_path.rs  diagnostics.rs  lib.rs  operation.rs
crates/rehearse-macros/src/pipeline/: lower.rs  mod.rs  parse.rs  validate.rs
crates/rehearse/examples/: conditional_rollout.rs  configure_vscode.rs  deploy.rs  read_after_write.rs
crates/rehearse/src/: __private.rs  describe.rs  error.rs  impact.rs  lib.rs  operation.rs  policy.rs  progress.rs  report.rs
crates/rehearse/src/plan/: builder.rs  mod.rs  node.rs  store.rs  value.rs
crates/rehearse/src/runner/: dry_run.rs  execute.rs  mod.rs
crates/rehearse/tests/: describe.rs  dry_run.rs  execute.rs  operation_macro_renamed.rs  operation_macro_runtime.rs  operation_macro_ui.rs  pipeline_macro_runtime.rs  pipeline_macro_ui.rs  plan.rs  reports.rs
crates/rehearse/tests/common/: mod.rs
crates/rehearse/tests/ui/operation/fail/: bad_return.rs  bad_return.stderr  borrowed_arg.rs  borrowed_arg.stderr  duplicate_context.rs  duplicate_context.stderr  generic_function.rs  generic_function.stderr  invalid_context_type.rs  invalid_context_type.stderr  invalid_impact.rs  invalid_impact.stderr  method_receiver.rs  method_receiver.stderr  non_async.rs  non_async.stderr
crates/rehearse/tests/ui/operation/pass/: contextful.rs  contextless.rs  input_forms.rs
crates/rehearse/tests/ui/pipeline/fail/: async_pipeline.rs  async_pipeline.stderr  bad_return.rs  bad_return.stderr  borrow_value.rs  borrow_value.stderr  branch_on_value.rs  branch_on_value.stderr  final_not_ok.rs  final_not_ok.stderr  final_not_step_value.rs  final_not_step_value.stderr  generic_pipeline.rs  generic_pipeline.stderr  malformed_step.rs  malformed_step.stderr  method_value.rs  method_value.stderr  missing_question.rs  missing_question.stderr  operator_value.rs  operator_value.stderr  question_outside_step.rs  question_outside_step.stderr  return_in_body.rs  return_in_body.stderr  step_in_async.rs  step_in_async.stderr  step_in_closure.rs  step_in_closure.stderr  step_outside.rs  step_outside.stderr
crates/rehearse/tests/ui/pipeline/pass/: bare_step.rs  contextless_and_plan_time.rs  straight_line.rs
scripts/: publish-local.sh
