[package]
name = "rehearse-macros"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Procedural macros for the rehearse operation planning crate."
documentation = "https://docs.rs/rehearse-macros"
publish = false

[lib]
proc-macro = true

[dependencies]
proc-macro-crate = "3"
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full", "visit"] }
