[package]
name = "rehearse"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Effect-aware operation planning with describe, dry-run, and execute modes."
documentation = "https://docs.rs/rehearse"
keywords = ["dry-run", "workflow", "planning", "effects"]
categories = ["asynchronous", "development-tools"]

[features]
default = ["macros"]
macros = ["dep:rehearse-macros"]

[dependencies]
rehearse-macros = { version = "0.1.1", path = "../rehearse-macros", optional = true }

[dev-dependencies]
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread"] }
trybuild = "1"
