[package]
name = "rehearse"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Effect-aware operation planning with describe, dry-run, and execute modes."
documentation = "https://docs.rs/rehearse"
readme = "README.md"
keywords = ["dry-run", "workflow", "planning", "effects"]
categories = ["asynchronous", "development-tools"]

[features]
default = ["macros"]
macros = ["dep:rehearse-macros"]
serde = ["dep:serde"]

[dependencies]
rehearse-macros = { version = "0.2.0", path = "../rehearse-macros", optional = true }
serde = { version = "1", features = ["derive"], optional = true }

[dev-dependencies]
clap = { version = "4", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread"] }
trybuild = "1"
